## 1.1.1 (2022-09-30)
- Document bytes() method
- Fix production bundle not including unminified assets.
- Add Node versions 16 and 18 to testing matrix (this library currently targets browser environments only)
- Drop testing on Node 12 (this library currently targets browser environments only)
- Update to latest stable version of Yarn

## 1.1.0 (2021-09-29)
- Improve documentation for integrating with build tools
- Add a reset() function that allows tearing down the Loam worker
- Allow initializing Loam from a CDN
- Add a demo page for local development

## 1.0.0 (2021-03-17)
- No changes from RC.2 except dependency updates

## 1.0.0-rc.2 (2020-10-30)
- Add information on contributing to the README
- Apply code auto-formatting
- Improve error messages with originating function names
- Add GDALDataset.render() to provide gdaldem functionality

## 1.0.0-rc.1 (2020-07-24)
- Add loam.rasterize() wrapper for GDALRasterize()
- Add pathPrefix parameter to loam.initialize()
- Remove closeAndReadBytes(), flushFS(), and convert close() to a no-op.
- Set up CI and automatic releases via GitHub Actions
- Package updates to resolve security alerts
- Validate that parameters to `warp()` and `convert()` are strings
- Add CHANGELOG, PR template

## 1.0.0-alpha.10 (2019-02-13)
- Add `reproject()` utility function